# rfdtool

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  rfdtool.py  rfdtool.spec
rfd/: __init__.py  detector.py  diff.py  ihx.py  mavlink_parser.py  presets.py  protocol.py  radio.py  regions.py  registers.py  uploader_8051.py  uploader_stm32.py  validation.py  xmodem.py
tests/: conftest.py  test_apply_persist_controller.py  test_diff_configs.py  test_ihx.py  test_mavlink_parser.py  test_presets.py  test_profile_from_ati5.py  test_protocol.py  test_radio_core.py  test_regions.py  test_registers.py  test_uploader_8051.py  test_uploader_stm32.py  test_validation.py  test_xmodem.py
ui/: apply_persist.py  apply_persist_dialog.py  compare_dialog.py  connection_panel.py  firmware_tab.py  main_window.py  pairing_guide.py  pairing_wizard.py  rssi_tab.py  settings_tab.py  system_checks.py  terminal_tab.py  theme.py  validation_dialog.py
