[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rfdtool"
version = "0.1.0"
description = "Linux GUI for configuring RFD900-series SiK radio modems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
